[project]
name = "leetcode-workspace"
version = "0.1.0"
description = ""
authors = [
    {name = "elnickkx",email = "nikkhilbutola13@outlook.com"}
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

runtime = "python3.12"

[tool.coverage.report]
exclude_also = [
  "def __repr__",
  "def __str__",
  "if 0:",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "nocov",
  "pass",
  "pragma: no cover",
  "raise AssertionError",
  "raise NotImplementedError",
  "def bootstrap_di",
  "def bootstrap_query_bus",
  "class .*\\bProtocol\\):",
  "class .*\\bException\\):",
  "^\\s*di\\[.*",
  "^\\s*\\.\\.\\.$"
]
fail_under = 80
show_missing = true
skip_empty = true
sort = "cover"

[tool.coverage.run]
branch = true
omit = [
  "tests/*"
]
relative_files = true

[tool.mypy]
disallow_untyped_defs = "true"
exclude = [
  ".venv/",
  "tests/"
]
follow_imports = "silent"
ignore_missing_imports = "true"
plugins = [
  "gaffe.mypy:plugin"
]
python_version = 3.12
warn_unused_configs = "true"

[tool.poetry]
description = ""
name = "leetcode-workspace"
packages = [
]
readme = 'README.md'
version = "0.5.1"

[tool.poetry.dependencies]
boto3 = "^1.37.12"
boto3-stubs = {extras = ["dynamodb", "s3", "sqs", "sts", "lambda", "cloudformation", "ssm", "ses", "events", "secretsmanager", "kms"], version = "^1.37.12"}
bson = "^0.5.10"
chili = "^2.8.4"
gaffe = "^0.3.0"
kink = "^0.8.1"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.4.4"}
freezegun = "^1.1.0"
moto = "^5.0.1"
mypy = "^1.8"
pytest = "^8.1.1"
pytest-cov = "^6.0.0"
pytest-randomly = "^3.11.0"
pytest-xdist = "^3.6.1"
ruff = "^0.11.1"
toml = "^0.10.2"
toml-sort = "^0.24.2"
types-freezegun = "^1.1.6"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
build-layer = "scripts.build_layer:main"
build-package = "scripts.build_package:main"


[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
select = ["E", "F", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 8
